fix(接口测试):解决api_module树生成异常问题
--bug=1024415 --user=郭雨琦
https://www.tapd.cn/55049933/bugtrace/bugs/view/1155049933001024415